style.css
body{
    background-image: url("images/pizza bkg.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
}
#result{
    margin-left: 30px;
    font-family: "Roboto Condensed", sans-serif;
    color: #F54900;
    margin-top: 20px;
    font-size: 20px;
    visibility: hidden;
}

.tagline{
    font-family: 'Monoton', cursive;
    color: white;
    font-size: 150px;
    text-align: right;
    line-height: 150px;
    margin-right: 100px;
    margin-left: 20px;
    padding-top: 250px;
}

.tagline2{
    font-family: Vivaldi;
    color: #F54900;
    font-size: 60px;
    text-align: right;
    margin-right: 100px;
    margin-top: -30px;
    margin-bottom: 15px;
}

.tagline3{
    font-family: 'Montserrat', sans-serif;
    color: white;
    font-size: 22px;
    text-align: center;
    line-height: 50px;
    margin-bottom: 30px;
}



#banner2span{
    margin-left: 2px;
}


#logo-img {
    display: flex;
    height: 100%;
    background: transparent;
    padding-left: 6px;
    padding-top: 5px;
    padding-bottom: 5px;
    align-items: center;
    color: white;
    transition: 0.4s;
}

#logo-img img {
    height: 100px;
}

.vieworder{
    border: none;
    background: transparent;
    color: #F54900;
    border-radius: 50px;
    height: 50px;
    width: 150px;
    margin-top: 10px;
    margin-right: -20px;
}

.makeorder{
    border: none;
    background: #F54900;
    color: white;
    border-radius: 50px;
    height: 100px;
    width: 300px;
    text-align: right;
    margin-top: 10px;
    margin-right: 5px;
}

#banner2{
    height: 500px;
    width: 100%;
    background-color: white;
}
.tagline4{
    font-family: "Roboto Condensed", sans-serif;
    color: #F54900;
    text-align: center;
    padding-top: 30px;
    font-size: 50px;
}

.section-heading{
    color: white;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 20px;
}

.card{
    margin-bottom: 10px;
    margin-top: 10px;

}

.labels2{
    color: white;
    font-size: larger;
    font-family: "Roboto Condensed", sans-serif;
}
.submt{
    margin-bottom: 30px;
    background-color: white;
    color: #F54900;
    border: none;
    width: 200px;
    height: 40px;
}

html{
    scroll-behavior: smooth;
}



nav {
    height: 72px;
    background: black;
    width: 100%;
    margin: 0;
    position: fixed;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 20px;
    display: flex;
    justify-content: space-between;
    padding: 0 16px 0 0;
    box-sizing: border-box;
    z-index: 100;
}


#logo-img {
    display: flex;
    height: 100%;
    background: black;
    padding: 0 32px;
    align-items: center;
    color: white;
    transition: 0.4s;
}

#logo-img img {
    height: 100px;
}

#logo-img:hover {
    background: black;
}



#search-icon:hover {
    color: red;
}


section {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.section-heading {
    font-size: 32px;
    font-family: "Roboto Condensed", sans-serif;
    border-left: 3px solid black;
    border-right: 3px solid black;
    transition: all 0.4s;
    display: inline-block;
    padding: 4px 32px;
}

.section-heading:hover {
    padding: 4px 48px;
    background: white;
    color: #F54900;
}





/* Media Queries */

@media (max-width: 900px) {
    nav ul {
        display: none;
    }

    #menu-icon {
        display: flex;
    }

    #slideout-menu {
        display: block;
    }

    #searchbox {
        display: none;
    }

    #blogpost{
        width:100%;
        border-left:0;
    }
    body{
        overflow-x: hidden;
    }
    .tagline{
        font-size: 100px;
        text-align: right;
        line-height: 100px;
    }
    .tagline2{
        font-size: 25px;
        visibility: hidden;

    }
    .tagline3{
        font-size: 18px;
        line-height: 20px;
    }
    select{
        width: 90%;
        height: 50px;
    }
    #buildpizza{
        margin-left: 50px;
    }
    .labels{
        color: white;
        font-family: "Roboto Condensed", sans-serif;
    }


}

/*small screens*/
@media (max-width: 719px) {
    main {
        width: 100%;
    }

    section {
        flex-direction: column;
    }

    .card,
    .card .card-image img {
        width: 100%;
    }
    .card{
        margin-bottom: 10px;
    }
    body{
        overflow-x: hidden;
    }
    .tagline{
        font-size: 100px;
        text-align: right;
        line-height: 100px;
    }
    .tagline2{
        font-size: 25px;
        visibility: hidden;



    }
    .tagline3{
        font-size: 18px;
        line-height: 20px;
    }
    select{
        width: 90%;
        height: 50px;
    }
    #buildpizza{
        margin-left: 50px;
    }
    .labels{
        color: white;
        font-family: "Roboto Condensed", sans-serif;
    }


}

@media (max-width: 600px) {
    main {
        width: 100%;
    }

    h1 {
        font-size: 48px;
    }

    #banner h3 {
        font-size: 20px;
    }

    .card {
        text-align: center;
    }

    #logo-img {
        padding: 0;
    }
    body{
        overflow-x: hidden;
    }
    .tagline{
        font-size: 100px;
        text-align: right;
        line-height: 100px;
    }
    .tagline2{
        font-size: 25px;
        visibility: hidden;


    }
    .tagline3{
        font-size: 18px;
        line-height: 20px;
    }
    select{
        width: 90%;
        height: 50px;
    }
    #buildpizza{
        margin-left: 50px;
    }
    .labels{
        color: white;
        font-family: "Roboto Condensed", sans-serif;
    }
}

/*tablet screens*/
@media (min-width: 720px) {
    main {
        width: 100%;
    }
    .card {
        width: 45%;
    }
    .card .card-image img {
        width: 100%;
    }
    body{
        overflow-x: hidden;
    }
    .tagline{
        font-size: 100px;
        text-align: right;
        line-height: 100px;
    }
    .tagline2{
        font-size: 25px;
        visibility: hidden;


    }
    .tagline3{
        font-size: 18px;
        line-height: 20px;
    }
    select{
        width: 90%;
        height: 50px;
    }
    #buildpizza{
        margin-left: 50px;
    }
    .labels{
        color: white;
        font-family: "Roboto Condensed", sans-serif;
    }
}

@media (min-width: 1200px) {
    main {
        width: 100%;
    }
    body{
        overflow-x: hidden;
    }
    .tagline{
        font-size: 100px;
        text-align: right;
        line-height: 100px;
    }
    .tagline2{
        font-size: 60px;
        visibility: visible;


    }
    .tagline3{
        font-size: 20px;
        line-height: 30px;
    }

    select{
        width: 90%;
        height: 50px;
    }
    #buildpizza{
        margin-left: 50px;
    }
    .labels{
        color: white;
        font-family: "Roboto Condensed", sans-serif;
    }

}

